--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "dependencies": {
-    "eris": "^0.17.1"
-  },
-  "name": "BasicPybot",
+  "name": "nnbaocuong99activedevbadgebot",
   "version": "1.0.0",
-  "description": "i dont really know",
+  "description": "package",
   "main": "index.js",
+  "dependencies": {
+    "eris": "^0.17.1",
+    "opusscript": "^0.0.8",
+    "ws": "^8.11.0",
+    "tweetnacl": "^1.0.3"
+  },
+  "devDependencies": {},
   "scripts": {
-    "run": "npm i && node ."
+    "test": "exit 0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nnbaocuong99/archived-badge-bot"
+    "url": "git+https://github.com/nnbaocuong99/Activedev-badge-bot.git"
   },
+  "author": "nnbaocuong99",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nnbaocuong99/Activedev-badge-bot/issues"
+  },
+  "homepage": "https://github.com/nnbaocuong99/Activedev-badge-bot#readme"
 }
