workflow to publish package

--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
   "homepage": "https://github.com/nnbaocuong99/Activedev-badge-bot#readme",
   "publishConfig": {
     "nnbaocuong99:registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nnbaocuong99/Activedev-badge-bot.git"
   }
 }
