--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "@nnbaocuong99/activedev-badge-bot",
-  "version": "1.0.0",
+  "name": "@tkssharma/package-name",
+  "version": "1.0.1",
   "description": "package",
   "main": "index.js",
   "dependencies": {
     "eris": "^0.17.1",
     "opusscript": "^0.0.8",
-    "ws": "^8.11.0",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "ws": "^8.11.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "exit 0"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nnbaocuong99/Activedev-badge-bot.git"
+    "url": "git@github.com:nnbaocuong99/Activedev-badge-bot.git"
   },
   "author": "nnbaocuong99",
   "license": "ISC",
@@ -24,6 +23,6 @@
   },
   "homepage": "https://github.com/nnbaocuong99/Activedev-badge-bot#readme",
   "publishConfig": {
-    "@nnbaocuong99:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com/"
   }
 }
