--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tkssharma/package-name",
+  "name": "@nnbaocuong99/package-name",
   "version": "1.0.1",
   "description": "package",
   "main": "index.js",
