workflow to publish package

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-#@nnbaocuong99:registry=https://npm.pkg.github.com
-@nnbaocuong99:registry=https://npm.pkg.github.com
+@nnbaocuong99:registry=https://npm.pkg.github.com/:_authToken=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
