--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://npm.pkg.github.com/:_authToken=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
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.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}}
