--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://npm.pkg.github.com/:_authToken=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
+          registry-url: https://npm.pkg.github.com/nnbaocuong99
       - run: npm ci
       - run: npm publish
         env:
